Olaf and Grid created

--- a/ComputerGraphics_Teak_Assign1/ComputerGraphics_Teak_Assign1.vcxproj
+++ b/ComputerGraphics_Teak_Assign1/ComputerGraphics_Teak_Assign1.vcxproj
@@ -158,7 +158,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="ComputerGraphics_Teak_Assign1.cpp" />
+    <ClCompile Include="ComputerGraphics_Teak_Assign1.cpp">
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="..\..\..\..\..\..\Pictures\grid_image.jpg" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
