--- a/ComputerGraphics_Teak_Assign1/ComputerGraphics_Teak_Assign1.vcxproj.filters
+++ b/ComputerGraphics_Teak_Assign1/ComputerGraphics_Teak_Assign1.vcxproj.filters
@@ -19,4 +19,9 @@
       <Filter>Fichiers sources</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="..\..\..\..\..\..\Pictures\grid_image.jpg">
+      <Filter>Fichiers sources</Filter>
+    </Image>
+  </ItemGroup>
 </Project>
