--- a/ComputerGraphics_Teak_Assign1/ComputerGraphics_Teak_Assign1.vcxproj.filters
+++ b/ComputerGraphics_Teak_Assign1/ComputerGraphics_Teak_Assign1.vcxproj.filters
@@ -43,5 +43,8 @@
     <ClInclude Include="OBJloader.h">
       <Filter>Fichiers sources</Filter>
     </ClInclude>
+    <ClInclude Include="stb_image.h">
+      <Filter>Fichiers sources</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
